# NCEPLIBS-ip

./: CMakeLists.txt  README.md
.github/workflows/: Intel.yml  Linux.yml  MacOS.yml  Spack.yml  cdash.yml  developer.yml
cmake/: PackageConfig.cmake.in
docs/: user_guide.md
spack/: package.py
src/: CMakeLists.txt  fftpack.F  ip_equid_cylind_grid_mod.F90  ip_gaussian_grid_mod.F90  ip_grid_descriptor_mod.F90  ip_grid_factory_mod.F90  ip_grid_mod.F90  ip_lambert_conf_grid_mod.F90  ip_mercator_grid_mod.F90  ip_polar_stereo_grid_mod.F90  ip_rot_equid_cylind_egrid_mod.F90  ip_rot_equid_cylind_grid_mod.F90  ip_station_points_grid_mod.F90  ipolates.F90  ipolatev.F90  ncpus.F  splat.F
tests/: CMakeLists.txt  interp_mod_grib1.F90  interp_mod_grib2.F90  test_fft.F90  test_fftpack.F90  test_fftpack_mod.F90  test_fftpack_mod_4.F90  test_fftpack_mod_8.F90  test_fftpack_mod_d.F90  test_sptezv.F90
